apps/overlays/au-oci/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openspeedtest
  namespace: openspeedtest
  labels:
    app.kubernetes.io/name: openspeedtest
spec:
  parentRefs:
    - name: private
      namespace: networking
  hostnames:
    - speed.au-oci.excloo.com
  rules:
    - backendRefs:
        - name: openspeedtest
          port: 80
